// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas Component No props 1`] = `
<canvas
  id=""
/>
`;

exports[`Canvas Component With id 1`] = `
<canvas
  id="test_id"
/>
`;

exports[`Canvas Component function is called after render 1`] = `
<canvas
  id="test_id"
/>
`;
